--- a/public/styles/prosemirror.css
+++ b/public/styles/prosemirror.css
@@ -31,7 +31,7 @@
   outline: 2px solid #8cf;
 }
 
-/* Make sure li selections wrap around markers */
+/* li selections wrap around markers */
 
 li.ProseMirror-selectednode {
   outline: none;
@@ -230,7 +230,6 @@ li.ProseMirror-selectednode:after {
 .ProseMirror-focused .ProseMirror-gapcursor {
   display: block;
 }
-/* Add space around the hr to make clicking it easier */
 
 .ProseMirror-example-setup-style hr {
   padding: 2px 10px;
